--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -69,7 +69,7 @@
                     <th>Time</th>
                 </thead>
                 <tbody>
-                    {% for log in page_obj %}
+                    {% for log in logs %}
                     <tr>
                         <td>{{log.id}}</td>
                         <td>{{log.name}}</td>
