--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -84,6 +84,25 @@
         
 
             <ul class="listPage">
+<!--                
+                {% if logs.has_previous %}
+
+                <li>prev</li>
+
+                {% endif %}
+                {% for page in page_range %}
+                   
+                    {% if page <= 3 %}
+                    <li>{{page}}</li>
+                    {% endif %}
+
+                {% endfor %}
+
+                {% if logs.has_next %}
+
+                <li onclick="changePage()">next</li>
+
+                {% endif %} -->
 
             </ul>
           
@@ -104,26 +123,26 @@
         let per_page = 10;
         let searchTerm = $('#search').val();
         let data = [];
-    // load data when page is loaded. this will load all data from table. and paginates.
-    // $(document).ready(function(){
-    //     $('.loading').show();
-    //     $.ajax({
-    //         type: "GET",
-    //         url: "{% url 'getlogs' %}",
-    //         success: function(response){
-    //             $('.loading').hide();
-    //             data = response.logs;
-    //             console.log(response.logs)
-    //             loadData(data); 
-    //             highLight();
-    //         },
-    //         error: function(response){
-    //             console.log("error accoured", response)
-    //         }
-    //     });
+    //load data when page is loaded. this will load all data from table. and paginates.
+    $(document).ready(function(){
+        $('.loading').show();
+        $.ajax({
+            type: "GET",
+            url: "{% url 'getlogs' %}",
+            success: function(response){
+                $('.loading').hide();
+                data = response.logs;
+                console.log(data)
+                paginate()
+                // highLight();
+            },
+            error: function(response){
+                console.log("error accoured", response)
+            }
+        });
 
         
-    // });
+    });
     
     // search button
     $('#btn').click(function(){
